# OBSRazerChroma

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
src/: AnimationController.cpp  AnimationController.hpp  ChromaSDK.cpp  ChromaSDK.hpp  Config.cpp  Config.hpp  Keys.def  Plugin.cpp
